--- a/4.4-overfitting-and-underfitting.ipynb
+++ b/4.4-overfitting-and-underfitting.ipynb
@@ -719,6 +719,128 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### l1(0.001) 모델과 비교"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l1_model = models.Sequential()\n",
+    "l1_model.add(layers.Dense(16, kernel_regularizer=regularizers.l1(0.001),\n",
+    "                          activation='relu', input_shape=(10000,)))\n",
+    "l1_model.add(layers.Dense(16, kernel_regularizer=regularizers.l1(0.001),\n",
+    "                          activation='relu'))\n",
+    "l1_model.add(layers.Dense(1, activation='sigmoid'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l1_model.compile(optimizer='rmsprop',\n",
+    "                 loss='binary_crossentropy',\n",
+    "                 metrics=['acc'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l1_model_hist = l1_model.fit(x_train, y_train,\n",
+    "                             epochs=20,\n",
+    "                             batch_size=512,\n",
+    "                             validation_data=(x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l1_model_val_loss = l1_model_hist.history['val_loss']\n",
+    "\n",
+    "plt.plot(epochs, original_val_loss, 'b+', label='Original model')\n",
+    "plt.plot(epochs, l1_model_val_loss, 'bo', label='L1-regularized model')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Validation loss')\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### l1_l2(l1=0.001, l2=0.001)모델과 비교"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l1l2_model = models.Sequential()\n",
+    "l1l2_model.add(layers.Dense(16, kernel_regularizer=regularizers.l1_l2(l1=0.001, l2=0.001),\n",
+    "                            activation='relu', input_shape=(10000,)))\n",
+    "l1l2_model.add(layers.Dense(16, kernel_regularizer=regularizers.l1_l2(l1=0.001, l2=0.001),\n",
+    "                            activation='relu'))\n",
+    "l1l2_model.add(layers.Dense(1, activation='sigmoid'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l1l2_model.compile(optimizer='rmsprop',\n",
+    "                   loss='binary_crossentropy',\n",
+    "                   metrics=['acc'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l1l2_model_hist = l1l2_model.fit(x_train, y_train,\n",
+    "                                 epochs=20,\n",
+    "                                 batch_size=512,\n",
+    "                                 validation_data=(x_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "l1l2_model_val_loss = l1l2_model_hist.history['val_loss']\n",
+    "\n",
+    "plt.plot(epochs, original_val_loss, 'b+', label='Original model')\n",
+    "plt.plot(epochs, l1_model_val_loss, 'bo', label='L1,L2-regularized model')\n",
+    "plt.xlabel('Epochs')\n",
+    "plt.ylabel('Validation loss')\n",
+    "plt.legend()\n",
+    "\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Adding dropout\n",
     "\n",
     "\n",
@@ -972,7 +1094,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.5.5"
   }
  },
  "nbformat": 4,
