--- a/6.3-advanced-usage-of-recurrent-neural-networks.ipynb
+++ b/6.3-advanced-usage-of-recurrent-neural-networks.ipynb
@@ -1417,9 +1417,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1471,90 +1469,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "K.clear_session()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from keras.models import Sequential\n",
-    "from keras import layers\n",
-    "from keras.optimizers import RMSprop\n",
-    "\n",
-    "model = Sequential()\n",
-    "model.add(layers.Bidirectional(\n",
-    "    layers.GRU(32), input_shape=(None, float_data.shape[-1])))\n",
-    "model.add(layers.Dense(1))\n",
-    "\n",
-    "model.compile(optimizer=RMSprop(), loss='mae')\n",
-    "history = model.fit_generator(train_gen,\n",
-    "                              steps_per_epoch=500,\n",
-    "                              epochs=40,\n",
-    "                              validation_data=val_gen,\n",
-    "                              validation_steps=val_steps)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "It performs about as well as the regular GRU layer. It's easy to understand why: all of the predictive capacity must be coming from the \n",
-    "chronological half of the network, since the anti-chronological half is known to be severely underperforming on this task (again, because \n",
-    "the recent past matters much more than the distant past in this case)."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "## Going even further\n",
-    "\n",
-    "At this stage, there are still many other things you could try in order to improve performance on our weather forecasting problem:\n",
-    "\n",
-    "* Adjust the number of units in each recurrent layer in the stacked setup. Our current choices are largely arbitrary and thus likely \n",
-    "suboptimal.\n",
-    "* Adjust the learning rate used by our `RMSprop` optimizer.\n",
-    "* Try using `LSTM` layers instead of `GRU` layers.\n",
-    "* Try using a bigger densely-connected regressor on top of the recurrent layers, i.e. a bigger `Dense` layer or even a stack of `Dense` \n",
-    "layers.\n",
-    "* Don't forget to eventually run the best performing models (in terms of validation MAE) on the test set! Least you start developing \n",
-    "architectures that are overfitting to the validation set.   \n",
-    "\n",
-    "As usual: deep learning is more an art than a science, and while we can provide guidelines as to what is likely to work or not work on a \n",
-    "given problem, ultimately every problem is unique and you will have to try and evaluate different strategies empirically. There is \n",
-    "currently no theory that will tell you in advance precisely what you should do to optimally solve a problem. You must try and iterate.\n",
-    "\n",
-    "\n",
-    "## Wrapping up\n",
-    "\n",
-    "Here's what you should take away from this section:\n",
-    "\n",
-    "* As you first learned in Chapter 4, when approaching a new problem, \n",
-    "it is good to first establish common sense baselines for your metric of choice. If you don't have a \n",
-    "baseline to beat, you can't tell if you are making any real progress.\n",
-    "* Try simple models before expensive ones, to justify the additional expense. Sometimes a simple model will turn out to be your best option.\n",
-    "* On data where temporal ordering matters, recurrent networks are a great fit and easily outperform models that first flatten the temporal \n",
-    "data.\n",
-    "* To use dropout with recurrent networks, one should use a time-constant dropout mask and recurrent dropout mask. This is built into Keras \n",
-    "recurrent layers, so all you have to do is use the `dropout` and `recurrent_dropout` arguments of recurrent layers.\n",
-    "* Stacked RNNs provide more representational power than a single RNN layer. They are also much more expensive, and thus not always worth it. \n",
-    "While they offer clear gains on complex problems (e.g. machine translation), they might not always be relevant to smaller, simpler problems.\n",
-    "* Bidirectional RNNs, which look at a sequence both ways, are very useful on natural language processing problems. However, they will not \n",
-    "be strong performers on sequence data where the recent past is much more informative than the beginning of the sequence.\n",
-    "\n",
-    "Note there are two important concepts that we will not cover in detail here: recurrent \"attention\", and sequence masking. Both tend to be \n",
-    "especially relevant for natural language processing, and are not particularly applicable to our temperature forecasting problem. We will \n",
-    "leave them for future study outside of this book."
+    "예나 온도 예측 문제에 양방향 RNN을 적용하는 예부터는 [6.3-apply-biRNN-to-jena-weather-problem](6.3-apply-biRNN-to-jena-weather-problem.ipynb) 파일에서 진행합니다. 노트북을 분리한 이유는 일부 GPU 환경에서 주피터 노트북이 메모리 반납이 원활하지 않기 때문입니다."
    ]
   }
  ],
