에러타 수정

--- a/6.3-advanced-usage-of-recurrent-neural-networks.ipynb
+++ b/6.3-advanced-usage-of-recurrent-neural-networks.ipynb
@@ -260,10 +260,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "{mean = float_data[:200000].mean(axis=0)\n",
+    "mean = float_data[:200000].mean(axis=0)\n",
     "float_data -= mean\n",
     "std = float_data[:200000].std(axis=0)\n",
-    "float_data /= std}"
+    "float_data /= std"
    ]
   },
   {
