5장 노트북 번역

--- a/5.1-introduction-to-convnets.ipynb
+++ b/5.1-introduction-to-convnets.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "text/plain": [
-       "'2.0.8'"
+       "'2.2.2'"
       ]
      },
      "execution_count": 1,
@@ -34,21 +34,17 @@
     "collapsed": true
    },
    "source": [
-    "# 5.1 - Introduction to convnets\n",
+    "# 5.1 - 합성곱 신경망 소개\n",
     "\n",
-    "This notebook contains the code sample found in Chapter 5, Section 1 of [Deep Learning with Python](https://www.manning.com/books/deep-learning-with-python?a_aid=keras&a_bid=76564dff). Note that the original text features far more content, in particular further explanations and figures: in this notebook, you will only find source code and related comments.\n",
+    "이 노트북은 [케라스 창시자에게 배우는 딥러닝](https://tensorflow.blog/%EC%BC%80%EB%9D%BC%EC%8A%A4-%EB%94%A5%EB%9F%AC%EB%8B%9D/) 책의 5장 1절의 코드 예제입니다. 책에는 더 많은 내용과 그림이 있습니다. 이 노트북에는 소스 코드에 관련된 설명만 포함합니다.\n",
     "\n",
     "----\n",
     "\n",
-    "First, let's take a practical look at a very simple convnet example. We will use our convnet to classify MNIST digits, a task that you've already been \n",
-    "through in Chapter 2, using a densely-connected network (our test accuracy then was 97.8%). Even though our convnet will be very basic, its \n",
-    "accuracy will still blow out of the water that of the densely-connected model from Chapter 2.\n",
+    "컨브넷의 정의와 컨브넷이 컴퓨터 비전 관련 작업에 잘 맞는 이유에 대해 이론적 배경을 알아보겠습니다. 하지만 먼저 간단한 컨브넷 예제를 둘러 보죠. 2장에서 완전 연결 네트워크로 풀었던(이 방식의 테스트 정확도는 97.8%였습니다) MNIST 숫자 이미지 분류에 컨브넷을 사용해 보겠습니다. 기본적인 컨브넷이더라도 2장의 완전 연결된 모델의 성능을 훨씬 앞지를 것입니다.\n",
     "\n",
-    "The 6 lines of code below show you what a basic convnet looks like. It's a stack of `Conv2D` and `MaxPooling2D` layers. We'll see in a \n",
-    "minute what they do concretely.\n",
-    "Importantly, a convnet takes as input tensors of shape `(image_height, image_width, image_channels)` (not including the batch dimension). \n",
-    "In our case, we will configure our convnet to process inputs of size `(28, 28, 1)`, which is the format of MNIST images. We do this via \n",
-    "passing the argument `input_shape=(28, 28, 1)` to our first layer."
+    "다음 코드는 기본적인 컨브넷의 모습입니다. `Conv2D`와 `MaxPooling2D` 층을 쌓아 올렸습니다. 잠시 후에 이들이 무엇인지 배우겠습니다.\n",
+    "\n",
+    "컨브넷이 `(image_height, image_width, image_channels)` 크기의 입력 텐서를 사용한다는 점이 중요합니다(배치 차원은 포함하지 않습니다). 이 예제에서는 MNIST 이미지 포맷인 `(28, 28, 1)` 크기의 입력을 처리하도록 컨브넷을 설정해야 합니다. 이 때문에 첫 번째 층의 매개변수로 `input_shape=(28, 28, 1)`을 전달합니다."
    ]
   },
   {
@@ -72,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's display the architecture of our convnet so far:"
+    "지금까지 컨브넷 구조를 출력해 보죠:"
    ]
   },
   {
@@ -114,21 +110,15 @@
     "collapsed": true
    },
    "source": [
-    "You can see above that the output of every `Conv2D` and `MaxPooling2D` layer is a 3D tensor of shape `(height, width, channels)`. The width \n",
-    "and height dimensions tend to shrink as we go deeper in the network. The number of channels is controlled by the first argument passed to \n",
-    "the `Conv2D` layers (e.g. 32 or 64).\n",
+    "`Conv2D`와 `MaxPooling2D` 층의 출력은 `(height, width, channels)` 크기의 3D 텐서입니다. 높이와 넓이 차원은 네트워크가 깊어질수록 작아지는 경향이 있습니다. 채널의 수는 `Conv2D` 층에 전달된 첫 번째 매개변수에 의해 조절됩니다(32개 또는 64개).\n",
     "\n",
-    "The next step would be to feed our last output tensor (of shape `(3, 3, 64)`) into a densely-connected classifier network like those you are \n",
-    "already familiar with: a stack of `Dense` layers. These classifiers process vectors, which are 1D, whereas our current output is a 3D tensor. \n",
-    "So first, we will have to flatten our 3D outputs to 1D, and then add a few `Dense` layers on top:"
+    "다음 단계에서 마지막 층의 (`(3, 3, 64)` 크기인) 출력 텐서를 완전 연결 네트워크에 주입합니다. 이 네트워크는 이미 익숙하게 보았던 `Dense` 층을 쌓은 분류기입니다. 이 분류기는 1D 벡터를 처리하는데 이전 층의 출력이 3D 텐서입니다. 그래서 먼저 3D 출력을 1D 텐서로 펼쳐야 합니다. 그다음 몇 개의 `Dense` 층을 추가합니다:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "model.add(layers.Flatten())\n",
@@ -140,8 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We are going to do 10-way classification, so we use a final layer with 10 outputs and a softmax activation. Now here's what our network \n",
-    "looks like:"
+    "10개의 클래스를 분류하기 위해 마지막 층의 출력 크기를 10으로 하고 소프트맥스 활성화 함수를 사용합니다. 이제 전체 네트워크는 다음과 같습니다:"
    ]
   },
   {
@@ -187,10 +176,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As you can see, our `(3, 3, 64)` outputs were flattened into vectors of shape `(576,)`, before going through two `Dense` layers.\n",
+    "여기에서 볼 수 있듯이 `(3, 3, 64)` 출력이 `(576,)` 크기의 벡터로 펼쳐진 후 `Dense` 층으로 주입되었습니다.\n",
     "\n",
-    "Now, let's train our convnet on the MNIST digits. We will reuse a lot of the code we have already covered in the MNIST example from Chapter \n",
-    "2."
+    "이제 MNIST 숫자 이미지에 이 컨브넷을 훈련합니다. 2장의 MNIST 예제 코드를 많이 재사용하겠습니다."
    ]
   },
   {
@@ -224,21 +212,21 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "60000/60000 [==============================] - 8s - loss: 0.1766 - acc: 0.9440     \n",
+      "60000/60000 [==============================] - 4s 70us/step - loss: 0.1771 - acc: 0.9441\n",
       "Epoch 2/5\n",
-      "60000/60000 [==============================] - 7s - loss: 0.0462 - acc: 0.9855     \n",
+      "60000/60000 [==============================] - 3s 51us/step - loss: 0.0476 - acc: 0.9850\n",
       "Epoch 3/5\n",
-      "60000/60000 [==============================] - 7s - loss: 0.0322 - acc: 0.9902     \n",
+      "60000/60000 [==============================] - 3s 51us/step - loss: 0.0332 - acc: 0.9896\n",
       "Epoch 4/5\n",
-      "60000/60000 [==============================] - 7s - loss: 0.0241 - acc: 0.9926     \n",
+      "60000/60000 [==============================] - 3s 51us/step - loss: 0.0248 - acc: 0.9923\n",
       "Epoch 5/5\n",
-      "60000/60000 [==============================] - 7s - loss: 0.0187 - acc: 0.9943     \n"
+      "60000/60000 [==============================] - 3s 50us/step - loss: 0.0195 - acc: 0.9943\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fbd9c4cd828>"
+       "<keras.callbacks.History at 0x7fba67d94710>"
       ]
      },
      "execution_count": 7,
@@ -257,7 +245,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's evaluate the model on the test data:"
+    "테스트 데이터에서 모델을 평가해 보죠:"
    ]
   },
   {
@@ -269,7 +257,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 9536/10000 [===========================>..] - ETA: 0s"
+      "10000/10000 [==============================] - 0s 32us/step\n"
      ]
     }
    ],
@@ -285,7 +273,7 @@
     {
      "data": {
       "text/plain": [
-       "0.99129999999999996"
+       "0.9921"
       ]
      },
      "execution_count": 9,
@@ -301,8 +289,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "While our densely-connected network from Chapter 2 had a test accuracy of 97.8%, our basic convnet has a test accuracy of 99.3%: we \n",
-    "decreased our error rate by 68% (relative). Not bad! "
+    "2장의 완전 연결 네트워크는 97.8%의 테스트 정확도를 얻은 반면, 기본적인 컨브넷은 99.2%의 테스트 정확도를 얻었습니다. 에러율이 (상대적으로) 64%나 줄었습니다. 나쁘지 않군요!"
    ]
   }
  ],
@@ -322,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
