6장 노트북 실행

--- a/6.1-one-hot-encoding-of-words-or-characters.ipynb
+++ b/6.1-one-hot-encoding-of-words-or-characters.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "text/plain": [
-       "'2.0.8'"
+       "'2.2.2'"
       ]
      },
      "execution_count": 1,
@@ -29,62 +29,56 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# One-hot encoding of words or characters\n",
+    "# 단어와 문자의 원-핫 인코딩\n",
     "\n",
-    "This notebook contains the first code sample found in Chapter 6, Section 1 of [Deep Learning with Python](https://www.manning.com/books/deep-learning-with-python?a_aid=keras&a_bid=76564dff). Note that the original text features far more content, in particular further explanations and figures: in this notebook, you will only find source code and related comments.\n",
+    "이 노트북은 [케라스 창시자에게 배우는 딥러닝](https://tensorflow.blog/%EC%BC%80%EB%9D%BC%EC%8A%A4-%EB%94%A5%EB%9F%AC%EB%8B%9D/) 책의 6장 1절의 코드 예제입니다. 책에는 더 많은 내용과 그림이 있습니다. 이 노트북에는 소스 코드에 관련된 설명만 포함합니다.\n",
     "\n",
     "----\n",
     "\n",
-    "One-hot encoding is the most common, most basic way to turn a token into a vector. You already saw it in action in our initial IMDB and \n",
-    "Reuters examples from chapter 3 (done with words, in our case). It consists in associating a unique integer index to every word, then \n",
-    "turning this integer index i into a binary vector of size N, the size of the vocabulary, that would be all-zeros except for the i-th \n",
-    "entry, which would be 1.\n",
+    "원-핫 인코딩은 토큰을 벡터로 변환하는 가장 일반적이고 기본적인 방법입니다. 3장에서 IMDB와 로이터 예제에서 이를 보았습니다(단어의 원-핫 인코딩을 사용했습니다). 모든 단어에 고유한 정수 인덱스를 부여하고 이 정수 인덱스 i를 크기가 N(어휘 사전의 크기)인 이진 벡터로 변환합니다. 이 벡터는 i번째 원소만 1이고 나머지는 모두 0입니다.\n",
     "\n",
-    "Of course, one-hot encoding can be done at the character level as well. To unambiguously drive home what one-hot encoding is and how to \n",
-    "implement it, here are two toy examples of one-hot encoding: one for words, the other for characters.\n",
-    "\n"
+    "물론 원-핫 인코딩은 문자 수준에서도 적용할 수 있습니다. 원-핫 인코딩이 무엇이고 어떻게 구현하는지 명확하게 설명하기 위해 단어와 문자에 대한 간단한 예를 만들었습니다."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Word level one-hot encoding (toy example):"
+    "단어 수준의 원-핫 인코딩(간단한 예):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "# This is our initial data; one entry per \"sample\"\n",
-    "# (in this toy example, a \"sample\" is just a sentence, but\n",
-    "# it could be an entire document).\n",
+    "# 초기 데이터: 각 원소가 샘플입니다\n",
+    "# (이 예에서 하나의 샘플이 하나의 문장입니다. 하지만 문서 전체가 될 수도 있습니다)\n",
     "samples = ['The cat sat on the mat.', 'The dog ate my homework.']\n",
     "\n",
-    "# First, build an index of all tokens in the data.\n",
+    "# 데이터에 있는 모든 토큰의 인덱스를 구축합니다\n",
     "token_index = {}\n",
     "for sample in samples:\n",
-    "    # We simply tokenize the samples via the `split` method.\n",
-    "    # in real life, we would also strip punctuation and special characters\n",
-    "    # from the samples.\n",
+    "    # split() 메서드를 사용해 샘플을 토큰으로 나눕니다.\n",
+    "    # 실전에서는 구둣점과 특수 문자도 사용합니다.\n",
     "    for word in sample.split():\n",
     "        if word not in token_index:\n",
-    "            # Assign a unique index to each unique word\n",
+    "            # 단어마다 고유한 인덱스를 할당합니다.\n",
     "            token_index[word] = len(token_index) + 1\n",
-    "            # Note that we don't attribute index 0 to anything.\n",
+    "            # 인덱스 0은 사용하지 않습니다.\n",
     "\n",
-    "# Next, we vectorize our samples.\n",
-    "# We will only consider the first `max_length` words in each sample.\n",
+    "# 샘플을 벡터로 변환합니다.\n",
+    "# 각 샘플에서 max_length 까지 단어만 사용합니다.\n",
     "max_length = 10\n",
     "\n",
-    "# This is where we store our results:\n",
+    "# 결과를 저장할 배열입니다\n",
     "results = np.zeros((len(samples), max_length, max(token_index.values()) + 1))\n",
     "for i, sample in enumerate(samples):\n",
     "    for j, word in list(enumerate(sample.split()))[:max_length]:\n",
@@ -93,22 +87,23 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Character level one-hot encoding (toy example)"
+    "문자 수준 원-핫 인코딩(간단한 예)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import string\n",
     "\n",
     "samples = ['The cat sat on the mat.', 'The dog ate my homework.']\n",
-    "characters = string.printable  # All printable ASCII characters.\n",
+    "characters = string.printable  # 출력 가능한 모든 아스키(ASCII) 문자\n",
     "token_index = dict(zip(characters, range(1, len(characters) + 1)))\n",
     "\n",
     "max_length = 50\n",
@@ -123,22 +118,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that Keras has built-in utilities for doing one-hot encoding text at the word level or character level, starting from raw text data. \n",
-    "This is what you should actually be using, as it will take care of a number of important features, such as stripping special characters \n",
-    "from strings, or only taking into the top N most common words in your dataset (a common restriction to avoid dealing with very large input \n",
-    "vector spaces)."
+    "케라스에는 원본 텍스트 데이터를 단어 또는 문자 수준의 원-핫 인코딩으로 변환해주는 유틸리티가 있습니다. 특수 문자를 제거하거나 빈도가 높은 N개의 단어만을 선택(입력 벡터 공간이 너무 커지지 않도록 하기 위한 일반적인 제한 방법입니다)하는 등 여러 가지 중요한 기능들이 있기 때문에 이 유틸리티를 사용하는 것이 좋습니다."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Using Keras for word-level one-hot encoding:"
+    "케라스를 사용한 단어 수준의 원-핫 인코딩:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -154,20 +146,19 @@
     "\n",
     "samples = ['The cat sat on the mat.', 'The dog ate my homework.']\n",
     "\n",
-    "# We create a tokenizer, configured to only take\n",
-    "# into account the top-1000 most common words\n",
+    "# 가장 빈도가 높은 1,000개의 단어만 선택하도록 Tokenizer 객체를 만듭니다.\n",
     "tokenizer = Tokenizer(num_words=1000)\n",
-    "# This builds the word index\n",
+    "# 단어 인덱스를 구축합니다.\n",
     "tokenizer.fit_on_texts(samples)\n",
     "\n",
-    "# This turns strings into lists of integer indices.\n",
+    "# 문자열을 정수 인덱스의 리스트로 변환합니다.\n",
     "sequences = tokenizer.texts_to_sequences(samples)\n",
     "\n",
-    "# You could also directly get the one-hot binary representations.\n",
-    "# Note that other vectorization modes than one-hot encoding are supported!\n",
+    "# 직접 원-핫 이진 벡터 표현을 얻을 수 있습니다.\n",
+    "# 원-핫 인코딩 외에 다른 벡터화 방법들도 제공합니다!\n",
     "one_hot_results = tokenizer.texts_to_matrix(samples, mode='binary')\n",
     "\n",
-    "# This is how you can recover the word index that was computed\n",
+    "# 계산된 단어 인덱스를 구합니다.\n",
     "word_index = tokenizer.word_index\n",
     "print('Found %s unique tokens.' % len(word_index))"
    ]
@@ -176,44 +167,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "A variant of one-hot encoding is the so-called \"one-hot hashing trick\", which can be used when the number of unique tokens in your \n",
-    "vocabulary is too large to handle explicitly. Instead of explicitly assigning an index to each word and keeping a reference of these \n",
-    "indices in a dictionary, one may hash words into vectors of fixed size. This is typically done with a very lightweight hashing function. \n",
-    "The main advantage of this method is that it does away with maintaining an explicit word index, which \n",
-    "saves memory and allows online encoding of the data (starting to generate token vectors right away, before having seen all of the available \n",
-    "data). The one drawback of this method is that it is susceptible to \"hash collisions\": two different words may end up with the same hash, \n",
-    "and subsequently any machine learning model looking at these hashes won't be able to tell the difference between these words. The likelihood \n",
-    "of hash collisions decreases when the dimensionality of the hashing space is much larger than the total number of unique tokens being hashed."
+    "원-핫 인코딩의 변종 중 하나는 원-핫 해싱 기법입니다. 이 방식은 어휘 사전에 있는 고유한 토큰의 수가 너무 커서 모두 다루기 어려울 때 사용합니다. 각 단어에 명시적으로 인덱스를 할당하고 이 인덱스를 딕셔너리에 저장하는 대신에 단어를 해싱하여 고정된 크기의 벡터로 변환합니다. 일반적으로 간단한 해싱 함수를 사용합니다. 이 방식의 주요 장점은 명시적인 단어 인덱스가 필요 없기 때문에 메모리를 절약하고 온라인 방식으로 데이터를 인코딩할 수 있습니다(전체 데이터를 확인하지 않고 토큰을 생성할 수 있습니다). 한 가지 단점은 해시 충돌입니다. 두 개의 단어가 같은 해시를 만들면 이를 바라보는 머신 러닝 모델은 단어 사이의 차이를 인식하지 못합니다. 해싱 공간의 차원이 해싱될 고유 토큰의 전체 개수보다 훨씬 크면 해시 충돌의 가능성은 감소합니다."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Word-level one-hot encoding with hashing trick (toy example):"
+    "해싱 기법을 사용한 단어 수준의 원-핫 인코딩(간단한 예):"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "samples = ['The cat sat on the mat.', 'The dog ate my homework.']\n",
     "\n",
-    "# We will store our words as vectors of size 1000.\n",
-    "# Note that if you have close to 1000 words (or more)\n",
-    "# you will start seeing many hash collisions, which\n",
-    "# will decrease the accuracy of this encoding method.\n",
+    "# 단어를 크기가 1,000인 벡터로 저장합니다.\n",
+    "# 1,000개(또는 그이상)의 단어가 있다면 해싱 충돌이 늘어나고 인코딩의 정확도가 감소될 것입니다\n",
     "dimensionality = 1000\n",
     "max_length = 10\n",
     "\n",
     "results = np.zeros((len(samples), max_length, dimensionality))\n",
     "for i, sample in enumerate(samples):\n",
     "    for j, word in list(enumerate(sample.split()))[:max_length]:\n",
-    "        # Hash the word into a \"random\" integer index\n",
-    "        # that is between 0 and 1000\n",
+    "        # 단어를 해싱하여 0과 1,000 사이의 랜덤한 정수 인덱스로 변환합니다.\n",
     "        index = abs(hash(word)) % dimensionality\n",
     "        results[i, j, index] = 1."
    ]
@@ -235,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
