8장 노트북 번역

--- a/8.1-text-generation-with-lstm.ipynb
+++ b/8.1-text-generation-with-lstm.ipynb
@@ -34,8 +34,7 @@
    "source": [
     "# LSTM으로 텍스트 생성하기\n",
     "\n",
-    "\n",
-    "This notebook contains the code samples found in Chapter 8, Section 1 of [Deep Learning with Python](https://www.manning.com/books/deep-learning-with-python?a_aid=keras&a_bid=76564dff). Note that the original text features far more content, in particular further explanations and figures: in this notebook, you will only find source code and related comments.\n",
+    "이 노트북은 [케라스 창시자에게 배우는 딥러닝](https://tensorflow.blog/%EC%BC%80%EB%9D%BC%EC%8A%A4-%EB%94%A5%EB%9F%AC%EB%8B%9D/) 책의 8장 1절의 코드 예제입니다. 책에는 더 많은 내용과 그림이 있습니다. 이 노트북에는 소스 코드에 관련된 설명만 포함합니다.\n",
     "\n",
     "----\n",
     "\n",
@@ -377,13 +376,7 @@
       "can neverthor also disequally character itses.=--cerest affought threurs dispoence, the\n",
       "is! ascistines, lawgifict\n",
       "syan\"\n",
-      "of upon the hubinxitness is, in\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "of upon the hubinxitness is, in\n",
       "endifiiatiably truth loze; there, a alpowent, on the\n",
       "custors--wanto--wilrever not, the gaintable tettetwhose, concelyeds\n",
       "ending p\n",
@@ -633,13 +626,7 @@
       "dream onestj(icurals-forelness slort the dare, each higher of a clonged\n",
       "nature apparent unwordholes difficuln, through eenifully, and spring, perhaps gives present, for handful in love in most promitation of the net one, these advocrorment. they seffersly, or to something it be arming wan should have briever has easie good inatuat one yes discerttanc\n",
       "------ 온도: 1.2\n",
-      "the slowly ascending ranks and classes, in which,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "the slowly ascending ranks and classes, in which,\n",
       "through formed by which meentows no improvilion, in which for the certaintieny, the masse at fact\n",
       "enemetn\n",
       "involved, loseled: out it band acquerition and dischare, not so master goder exarint, sheed men cause of human ci\"wtaes and averty of his all the greates even the ver!as when\n",
@@ -985,13 +972,7 @@
       "--- 시드 텍스트: \"the slowly ascending ranks and classes, in which,\n",
       "through fo\"\n",
       "------ 온도: 0.2\n",
-      "the slowly ascending ranks and classes, in which,\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "the slowly ascending ranks and classes, in which,\n",
       "through for the conscience of the contention of the spirit, that is a subtlety and the antimoratic and soul, the present that any one must a subtlies and self-saint of the conscience and conscience of the spirit, and a subtlety and suberity and also the faith of the conscience of the conscience of the conscience of the conscience of the facultiught, and the present that the spirit and soul, and the great co\n",
       "------ 온도: 0.5\n",
       "the slowly ascending ranks and classes, in which,\n",
