데이터셋 관련 설명 정정

--- a/6.1-using-word-embeddings.ipynb
+++ b/6.1-using-word-embeddings.ipynb
@@ -242,7 +242,7 @@
    "source": [
     "### 원본 IMDB 텍스트 다운로드하기\n",
     "\n",
-    "먼저 http://mng.bz/0tIo 에서 IMDB 원본 데이터셋을 다운로드하고 압축을 해제합니다.(이 저장소에는 이미 포함되어 있습니다)\n",
+    "먼저 http://mng.bz/0tIo 에서 IMDB 원본 데이터셋을 다운로드하고 압축을 해제합니다.\n",
     "\n",
     "훈련용 리뷰 하나를 문자열 하나로 만들어 훈련 데이터를 문자열의 리스트로 구성해 보죠. 리뷰 레이블(긍정/부정)도 `labels` 리스트로 만들겠습니다:"
    ]
