코드 버그 수정

--- a/8.2-deep-dream.ipynb
+++ b/8.2-deep-dream.ipynb
@@ -393,7 +393,7 @@
     "plt.figure()\n",
     "\n",
     "plt.imshow(deprocess_image(np.copy(img)))\n",
-    "splt.show()"
+    "plt.show()"
    ]
   }
  ],
