--- a/5.1-introduction-to-convnets.ipynb
+++ b/5.1-introduction-to-convnets.ipynb
@@ -15,7 +15,7 @@
     {
      "data": {
       "text/plain": [
-       "'2.2.2'"
+       "'2.2.4'"
       ]
      },
      "execution_count": 1,
@@ -36,7 +36,7 @@
    "source": [
     "# 5.1 - 합성곱 신경망 소개\n",
     "\n",
-    "이 노트북은 [케라스 창시자에게 배우는 딥러닝](https://tensorflow.blog/%EC%BC%80%EB%9D%BC%EC%8A%A4-%EB%94%A5%EB%9F%AC%EB%8B%9D/) 책의 5장 1절의 코드 예제입니다. 책에는 더 많은 내용과 그림이 있습니다. 이 노트북에는 소스 코드에 관련된 설명만 포함합니다.\n",
+    "이 노트북은 [케라스 창시자에게 배우는 딥러닝](https://tensorflow.blog/케라스-창시자에게-배우는-딥러닝/) 책의 5장 1절의 코드 예제입니다. 책에는 더 많은 내용과 그림이 있습니다. 이 노트북에는 소스 코드에 관련된 설명만 포함합니다. 이 노트북의 설명은 케라스 버전 2.2.2에 맞추어져 있습니다. 케라스 최신 버전이 릴리스되면 노트북을 다시 테스트하기 때문에 설명과 코드의 결과가 조금 다를 수 있습니다.\n",
     "\n",
     "----\n",
     "\n",
@@ -212,21 +212,21 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "60000/60000 [==============================] - 4s 70us/step - loss: 0.1771 - acc: 0.9441\n",
+      "60000/60000 [==============================] - 4s 71us/step - loss: 0.1786 - acc: 0.9441\n",
       "Epoch 2/5\n",
-      "60000/60000 [==============================] - 3s 51us/step - loss: 0.0476 - acc: 0.9850\n",
+      "60000/60000 [==============================] - 3s 51us/step - loss: 0.0487 - acc: 0.9853\n",
       "Epoch 3/5\n",
-      "60000/60000 [==============================] - 3s 51us/step - loss: 0.0332 - acc: 0.9896\n",
+      "60000/60000 [==============================] - 3s 51us/step - loss: 0.0339 - acc: 0.9892\n",
       "Epoch 4/5\n",
-      "60000/60000 [==============================] - 3s 51us/step - loss: 0.0248 - acc: 0.9923\n",
+      "60000/60000 [==============================] - 3s 51us/step - loss: 0.0253 - acc: 0.9921\n",
       "Epoch 5/5\n",
-      "60000/60000 [==============================] - 3s 50us/step - loss: 0.0195 - acc: 0.9943\n"
+      "60000/60000 [==============================] - 3s 51us/step - loss: 0.0191 - acc: 0.9943\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fba67d94710>"
+       "<keras.callbacks.History at 0x7f71495a0a20>"
       ]
      },
      "execution_count": 7,
@@ -273,7 +273,7 @@
     {
      "data": {
       "text/plain": [
-       "0.9921"
+       "0.9898"
       ]
      },
      "execution_count": 9,
